# slm-from-scratch

./: LICENSE  README.md  gpt-dev.ipynb  pyproject.toml  train.py  train_config.ini
