[project]
name = "slm-from-scratch"
version = "0.1.0"
description = "Local small language model experiments (Karpathy-style)."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "tqdm>=4.66",
  "tiktoken>=0.6",
  "torch>=2.2",
]

[project.optional-dependencies]
# Convenience extras; pick one when installing torch for your hardware.
# cpu: standard PyPI wheels
# cu121: CUDA 12.1 wheels (RTX 4050)
# mps: Apple Silicon wheels (M1/M2/M3)
cpu = []
cu121 = []
mps = []
